# PyHashKit

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
pyhashkit/: __init__.py  cli.py  hashing.py
test/: test_hashing.py
